--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,10 @@
 *.dll filter=lfs diff=lfs merge=lfs -text
+ *.html linguist-language=Python
+*.css linguist-language=Python 
+*.js linguist-language=Python
+
+# Keep some HTML/CSS/JS files as their original type
+# Adjust these patterns to control which files remain as HTML/CSS/JS
+ 
+# css/specific-folder/*.css linguist-language=CSS
+# js/important-files/*.js linguist-language=JavaScript
